[metadata]
name = antenna
version = 0.0.1
description = Simple antenna modeling package
long_description = file: README.md
author = bopaqiun
license = MIT License
license_files = file: LICENSE
classifiers =
    Programming Language :: Python :: 3
    License :: MIT License
    Operating System :: OS Independent
requires =
    numpy
    matplotlib

[options]
packages = find:
python_requires = >=3.10